--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="content">
 
             <div id="img">
-                <img src="/p1.png" alt="">
+                <img src="p1.png" alt="">
                 <div class="left">
                     <h1>Learn from the coolest </h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe in facere dicta quae eos sapiente
